--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="container" style="margin-top: 50px;margin-bottom: 50px;">
-        <div class="row  col-lg-offset-1" >
+        <div class="row  col-lg-offset-1">
             <div class="col-lg-10 form-block-background" style="padding-bottom:20px;padding-top:20px;">
                 {notpresent name="$info"}
                 <form class="form-horizontal" role="form" id="subForm" autocomplete="off">
@@ -66,7 +66,7 @@
                             <ul class="list-group">
                                 {foreach name="vo.options" item="voo" key="kk"}
                                 <label style="width:100%;" class="list-group-item">
-                                    <input type="radio" name="{$key}" value="{$voo}" checked="true"> {$voo}
+                                    <input type="radio" name="{$key}" class="required" value="{$voo}"> {$voo}
                                 </label>
                                 {/foreach}
                             </ul>
@@ -131,21 +131,12 @@
                         if (data.code == 1) {
                             showMsgAndHref(data);
                         } else if (data.code == 101) {
-                            if (isPC) {
-                                confirm(
-                                    data.msg,
-                                    "数据覆盖确认",
-                                    "{:url('index/Template/collect')}",
-                                    $("form").serialize()
-                                );
-                            } else {
-                                confirm(
-                                    data.msg,
-                                    "该记录已存在，确认覆盖吗?",
-                                    "{:url('index/Template/collect')}",
-                                    $("form").serialize()
-                                );
-                            }
+                            confirm(
+                                data.msg,
+                                "数据覆盖确认",
+                                "{:url('index/Template/collectUpdate')}",
+                                $("form").serialize()
+                            );
                         } else {
                             showErrorMsg(data.msg);
                         }
