去掉必填说明

--- a/application/admin/view/hand/index.html
+++ b/application/admin/view/hand/index.html
@@ -35,7 +35,7 @@
                                     <tr>
                                         <th  colspan="4">
                                             <h4>表单说明</h4>
-                                            <textarea type="text" required="true" class="form-control" id="remarks" name="remarks" rows="5"></textarea>
+                                            <textarea type="text" class="form-control" id="remarks" name="remarks" rows="5"></textarea>
                                         </th>
                                     </tr>
                                 </table>
