--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -22,6 +22,8 @@
                         </a>
                         <a href="{:url('admin/Hand/index')}">
                             <button class="btn btn-primary btn-lg">手动创建</button>
+                        </a>   <a href="{:url('admin/Hand/word')}">
+                            <button class="btn btn-primary btn-lg">手动创建word</button>
                         </a>
                     </div>
                 </div>
