--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -20,10 +20,10 @@
                         <a href="{:url('admin/Import/First')}" style="margin-right: 10px;">
                             <button class="btn btn-primary btn-lg">文件导入</button>
                         </a>
-                        <a href="{:url('admin/Hand/index')}">
+                        <a href="{:url('admin/Hand/index')}" style="margin-right: 10px;">
                             <button class="btn btn-primary btn-lg">手动创建</button>
-                        </a>   <a href="{:url('admin/Hand/word')}">
-                            <button class="btn btn-primary btn-lg">手动创建word</button>
+                        </a>   <a href="{:url('admin/Hand/word')}" style="margin-right: 10px;">
+                            <button class="btn btn-primary btn-lg">手动创建带word模板</button>
                         </a>
                     </div>
                 </div>
