--- a/application/admin/view/home/help.html
+++ b/application/admin/view/home/help.html
@@ -43,7 +43,13 @@
                         <h4>手动创建</h4>
                         <p>
                             在&nbsp;<a href="{:url('admin/templates/add')}">新建表单</a>&nbsp;页面点击<a
-                                href="">手动创建</a>,可以选择添加<strong>文本框</strong>或者<strong>下拉菜单</strong>,并且<strong>文本框</strong>支持自定义数据类型,目前支持普通文本、邮箱、数字、手机号或者非必填
+                                href="{:url('admin/Hand/index')}">手动创建</a>,可以选择添加<strong>文本框</strong>或者<strong>下拉菜单</strong>,并且<strong>文本框</strong>支持自定义数据类型,目前支持普通文本、邮箱、数字、手机号或者非必填
+                        </p>
+                        <p>
+                            在初始化之前还可以在右侧选择作为记录ID的字段，它是表单数据的唯一标识字段，值是唯一的，后续提交时，可以覆盖已存在唯一字段值的记录，并且记录最近更新的时间
+                        </p>
+                        <p>
+                            在指定唯一字段后还可以选择是否使用自定义数据集，即白名单模式
                         </p>
                     </li>
 
@@ -51,7 +57,7 @@
                         <h4>Excel导入</h4>
                         <p>
                             在&nbsp;<a href="{:url('admin/templates/add')}">新建表单</a>&nbsp;页面点击<a
-                                href="">文件导入</a>,填写好表单名，选择包含表单字段的excel文件，文件上传后会自动生成表单，进入到表单预览页面，目前不支持改变字段类型，默认普通文本；所有字段都是<strong>必填项</strong>
+                                href="{:url('admin/Import/First')}">文件导入</a>,填写好表单名，选择包含表单字段的excel文件，文件上传后会自动生成表单，进入到表单预览页面，目前不支持改变字段类型，默认普通文本；所有字段都是<strong>必填项</strong>
                         </p>
                         <div class="panel panel-info">
                             <div class="panel-heading">
@@ -71,10 +77,18 @@
 
                         </div>
                     </li>
-
                     <li>
-                        <h4>唯一标识字段</h4>
-                        <p>作为表单数据的唯一标识字段，值是唯一的，后续提交时，可以覆盖已存在唯一字段值的记录，并且记录最近更新的时间
+                        <h4>手动创建word表单</h4>
+                        <p>
+                            在&nbsp;<a href="{:url('admin/templates/add')}">新建表单</a>&nbsp;页面点击<a
+                                href="{:url('admin/Hand/word')}">手动创建word表单</a>可以手动创建一个普通表单，同时可以在本地制作与表单字段匹配的word模板，上传后可以在收集信息后批量生成word文档
+                        </p>
+                        <p>
+                           <strong>具体操作：</strong>
+                           新增字段后，点击该字段所在行的复制按钮，将系统生成的内容复制到word中对应位置，全部复制到word之后进行上传，最后初始化即可；
+                        </p>
+                        <p>
+                            由于批量生成文件时文件名是唯一的，文件名会作为记录ID，因此应保证文件名的唯一性
                         </p>
                     </li>
                 </ul>
