--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -23,7 +23,7 @@
                         <a href="{:url('admin/Hand/index')}" style="margin-right: 10px;">
                             <button class="btn btn-primary btn-lg">手动创建</button>
                         </a>   <a href="{:url('admin/Hand/word')}" style="margin-right: 10px;">
-                            <button class="btn btn-primary btn-lg">手动创建带word模板</button>
+                            <button class="btn btn-primary btn-lg">手动创建word表单</button>
                         </a>
                     </div>
                 </div>
