表单页样式调整

--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -40,10 +40,9 @@
                             <span class="redInfo">*
                             </span>
                             {/neq}
-                            {$k}.
                         </label>
                         <label for="{$key}" class="col-lg-10">
-                            {$vo.title}
+                            <span class="blod">{$k}.&nbsp;&nbsp;</span>{$vo.title}
                         </label>
                         <div class="col-lg-10">
                             <input type="text" class="form-control  {$vo.rule|split}" id="{$key}" name="{$key}">
@@ -57,10 +56,9 @@
                             {neq name="$vo.rule" value="text"}
                             <span class="redInfo">*</span>
                             {/neq}
-                            {$k}.
                         </label>
                         <label for="{$key}" class="col-lg-10">
-                            {$vo.title}
+                            <span class="blod">{$k}.&nbsp;&nbsp;</span>{$vo.title}
                         </label>
                         <div class="col-lg-10">
                             <ul class="list-group">
@@ -79,10 +77,9 @@
                             <span class="redInfo">*
                             </span>
                             {/neq}
-                            {$k}.
                         </label>
                         <label for="{$key}" class="col-lg-10">
-                            {$vo.title}
+                            <span class="blod">{$k}.&nbsp;&nbsp;</span>{$vo.title}
                         </label>
                         <div class="col-lg-10">
                             <select class="form-control" required="true" name="{$key}">
