--- a/application/admin/view/hand/word.html
+++ b/application/admin/view/hand/word.html
@@ -24,9 +24,7 @@
                     <ul class="fa-ul">
                         <li>
                             <i class="fa fa-exclamation-triangle fa-li fa-lg" aria-hidden="true"></i>
-
-                            &lt;<font style="color: red;">文件名</font>&gt;的命名规则应该是唯一的，比如学号，手机号，或其他定义的规则，应在"表单说明"里说明
-                        </li>
+                            &lt;<font style="color: red;">文件名</font>&gt;的命名规则应该是唯一的，比如学号，手机号，或其他定义的规则，应在"表单说明"里说明，且使用word模板的表单创建后无法编辑</li>
                     </ul>
 
                 </div>
