--- a/public/static/css/hand.css
+++ b/public/static/css/hand.css
@@ -7,10 +7,6 @@
             min-width: 50px;
         }
 
-        input {
-            max-width: 100px;
-        }
-
         td,
         label {
             font-size: 10px;
@@ -31,6 +27,10 @@
             padding: 2px;
             font-size: 10px;
         }
+
+        .form-control {
+            margin-top: 2px;
+          }
     }
 
     .i-radio {
@@ -70,7 +70,7 @@
     .select {
         display: inline-block;
         width: auto;
-        min-width: 80px;
+        min-width: 50px;
         height: 30px;
         position: relative;
         vertical-align: middle;
@@ -115,4 +115,12 @@
 
     .select select:focus {
         outline: none;
+    }
+
+    .btn-info{
+        margin-top: 20px;
+    }
+
+    .form-control{
+        padding: 0;
     }
